@@ -1,3 +1,10 @@
+1998-08-21  Tanaka Akira      <akr@jaist.ac.jp>
+
+	* ew-unit.el (ew-eword-p): Use aref instead of substring.
+	(ew-char-decoder): Refined.
+
+	* lalr-el.scm (gen-larl1): New function.
+
 1998-08-20  Tanaka Akira      <akr@jaist.ac.jp>
 
 	* ew-var.el (ew-dynamic-options): The result is now integer instead
